--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <div>
         <div class="AA"><div id="PcP" class="PP">0</div></div>
         <div class="AAQ"><div id="PcP1" class="PP">0</div></div>
+        <div ondblclick="SSSS()" class="AAQ1"><div id="PcP2" class="PP Q1">R</div></div>
 
         <div class="DD">
             <div class="VV">
