--- a/L/EL1.html
+++ b/L/EL1.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="sv">
 <head>
-          <meta charset="UTF-8">
-          <meta name="viewport" content="width=device-width, initial-scale=1.0">
-          <title>Documqent</title>
-          <link rel="stylesheet" href="../style.css">
-          <script src="../js.js" defer></script>
-          <link href='https://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet'>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Documqent</title>
+    <link rel="stylesheet" href="../style.css">
+    <script src="../js.js" defer></script>
+    <link href='https://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet'>
 </head>
 <body>
     <div>
@@ -24,10 +24,14 @@
             </div>
         </div>
     </div>
+    <div class="popup">
+        <div id="pop" class="BOXQQQQ"></div>
+    </div>
 </body>
 <script>
     window.onload = function() {
-        FF('EL1', 1, 1, 0, 1)
+        NNNQQ();
+        FF('EL1', 1, 1, 0, 1);
     }   
 </script>
 </html>
