--- a/L/I.html
+++ b/L/I.html
@@ -10,17 +10,17 @@
 </head>
 <body>
     <div>
-        <div class="BNN">
-            <div class="GHH">
-                <div><div onclick="QQQQ('<1')" class="PP"><</div></div>
+        <div class="BNNq1">
+            <div><div onclick="QQQQ('<!')" class="PPq1"><</div></div>
+            <div class="GHHq1">
                 <div id="HEE" class="HEE"></div>
-                <div id="HRR" class="HRR">2</div>
+                <div id="HRR" class="HRRq1">5</div>
             </div>
         </div>
         <div>
             <div class="VVRR">
-                <input class="TTRR" type="text" placeholder="  Ange svar" id="in">
-                <div onclick="JJ(1)", class = "BBRR">Done</div>
+                <input class="TTRR" type="text" placeholder="  Ange svar" id="in1">
+                <div onclick="GFD()", class = "BBRR">Done</div>
             </div>
         </div>
     </div>
@@ -31,8 +31,8 @@
 </body>
 <script>
     window.onload = function() {
-        FF('EL2', 2, 1, 0, 1)
-        NNNQQ()
+        RRRR(); // Call the function
+        NNNQQ();
     }   
 </script>
 </html>
