--- a/index.html
+++ b/index.html
@@ -16,16 +16,22 @@
 
         <div class="DD">
             <div class="VV">
-                <div onclick="QQQQ('E')" class="FF">E</div>
-                <div onclick="QQQQ('M')" class="FF q2">M</div>
-                <div onclick="QQQQ('H')" class="FF q3">H</div>
+                <div onclick="QQQQ('E')" class="FF">1 E</div>
+                <div onclick="QQQQ('M')" class="FF q2">2 M</div>
+                <div onclick="QQQQ('H')" class="FF q3">3 H</div>
             </div>
+            <div onclick="QQQQ('I')" class="FFq">∞ infinity Mode</div>
         </div>
+    </div>
+
+    <div class="popup">
+        <div id="pop" class="BOXQQQQ"></div>
     </div>
 </body>
 <script>
     window.onload = function() {
         LL()
+        NNNQQ()
     }   
 </script>
 </html>
