--- a/L/HL1.html
+++ b/L/HL1.html
@@ -24,10 +24,15 @@
             </div>
         </div>
     </div>
+
+    <div class="popup">
+        <div id="pop" class="BOXQQQQ"></div>
+    </div>
 </body>
 <script>
     window.onload = function() {
         FF('HL1', 1, 3, 0, 5)
+        NNNQQ()
     }   
 </script>
 </html>
