--- a/MLS.html
+++ b/MLS.html
@@ -4,6 +4,7 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Document</title>
+          <script src="js.js" defer></script>
           <link rel="stylesheet" href="style.css">
           <link href='https://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet'>
 </head>
@@ -21,6 +22,14 @@
             </div>
         </div>
     </div>
+
+    <div class="popup">
+        <div id="pop" class="BOXQQQQ"></div>
+    </div>
 </body>
-<script src="js.js"></script>
+<script>
+    window.onload = function() {
+        NNNQQ()
+    }   
+</script>
 </html>
