--- a/ELS.html
+++ b/ELS.html
@@ -19,6 +19,11 @@
                 <div id="EL3" onclick="QQ('EL3')" class="FF1">3</div>
                 <div id="EL4" onclick="QQ('EL4')" class="FF1">4</div>
                 <div id="EL5" onclick="QQ('EL5')" class="FF1">5</div>
+                <div id="EL6" onclick="QQ('EL6')" class="FF1">6</div>
+                <div id="EL7" onclick="QQ('EL7')" class="FF1">7</div>
+                <div id="EL8" onclick="QQ('EL8')" class="FF1">8</div>
+                <div id="EL9" onclick="QQ('EL9')" class="FF1">9</div>
+                <div id="EL10" onclick="QQ('EL10')" class="FF1">10</div>
             </div>
         </div>
     </div>
