--- a/L/MM/ML9.html
+++ b/L/MM/ML9.html
@@ -4,26 +4,23 @@
           <meta charset="UTF-8">
           <meta name="viewport" content="width=device-width, initial-scale=1.0">
           <title>Documqent</title>
-          <link rel="stylesheet" href="../style.css">
-          <script src="../js.js" defer></script>
+          <link rel="stylesheet" href="../../style.css">
+          <script src="../../js.js" defer></script>
           <link href='https://fonts.googleapis.com/css?family=Kavoon' rel='stylesheet'>
 </head>
 <body>
     <div>
-        <div class="BNNq1">
-            <div><div onclick="QQQQ('<!')" class="PPq1"><</div></div>
-            <div class="GHHq1">
+        <div class="BNN">
+            <div class="GHH">
+                <div><div onclick="QQQQ('<2')" class="PP"><</div></div>
                 <div id="HEE" class="HEE"></div>
-                <div class="QVVTT">
-                    <div id="HRR" class="HRRq1"></div>
-                    <div id="HRRaa" class="HRRq1"></div>
-                </div>
+                <div id="HRR" class="HRR">9</div>
             </div>
         </div>
         <div>
             <div class="VVRR">
-                <input class="TTRR" type="text" placeholder="  Ange svar" id="in1">
-                <div onclick="GFD()", class = "BBRR">Done</div>
+                <input class="TTRR" type="text" placeholder="  Ange svar" id="in">
+                <div onclick="JJ(2)", class = "BBRR">Done</div>
             </div>
         </div>
     </div>
@@ -34,8 +31,8 @@
 </body>
 <script>
     window.onload = function() {
-        RRRR(); // Call the function
-        NNNQQ();
+        FF('ML9', 9, 2, 0, 2)
+        NNNQQ()
     }   
 </script>
 </html>
