--- a/MLS.html
+++ b/MLS.html
@@ -19,6 +19,11 @@
                 <div id="ML3" onclick="QQ('ML3')" class="FF1">3</div>
                 <div id="ML4" onclick="QQ('ML4')" class="FF1">4</div>
                 <div id="ML5" onclick="QQ('ML5')" class="FF1">5</div>
+                <div id="ML6" onclick="QQ('ML6')" class="FF1">6</div>
+                <div id="ML7" onclick="QQ('ML7')" class="FF1">7</div>
+                <div id="ML8" onclick="QQ('ML8')" class="FF1">8</div>
+                <div id="ML9" onclick="QQ('ML9')" class="FF1">9</div>
+                <div id="ML10" onclick="QQ('ML10')" class="FF1">10</div>
             </div>
         </div>
     </div>
