--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div ondblclick="SSSS()" class="AAQ1"><div id="PcP2" class="PP Q1">R</div></div>
 
         <div class="DD">
-            <div class="VV">
+            <div class="VV1">
                 <div onclick="QQQQ('E')" class="FF">1 E</div>
                 <div onclick="QQQQ('M')" class="FF q2">2 M</div>
                 <div onclick="QQQQ('H')" class="FF q3">3 H</div>
